# ciscoisesdk

./: .flake8  .gitignore  .readthedocs.yml  .test.flake8  CHANGELOG.md  LICENSE  Pipfile  README.rst  pyproject.toml  quickstart_v3_5_0.py  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
ciscoisesdk/: __init__.py  _metadata.py  config.py  environment.py  exceptions.py  misc.py  pagination.py  response_codes.py  restresponse.py  restsession.py  utils.py
ciscoisesdk/api/: __init__.py  authentication.py  custom_caller.py
ciscoisesdk/api/v3_0_0/: aci_bindings.py  aci_settings.py  active_directory.py  admin_user.py  allowed_protocols.py  anc_endpoint.py  anc_policy.py  authorization_profile.py  backup_and_restore.py  byod_portal.py  certificate_profile.py  certificate_template.py  certificates.py  clear_threats_and_vulnerabilities.py  consumer.py  deployment.py  device_administration_authentication_rules.py  device_administration_authorization_exception_rules.py  device_administration_authorization_global_exception_rules.py  device_administration_authorization_rules.py  device_administration_command_set.py  device_administration_conditions.py  device_administration_dictionary_attributes_list.py  device_administration_identity_stores.py  device_administration_network_conditions.py  device_administration_policy_set.py  device_administration_profiles.py  device_administration_service_names.py  device_administration_time_date_conditions.py  downloadable_acl.py  egress_matrix_cell.py  endpoint.py  endpoint_cert.py  endpoint_certificate.py  endpoint_group.py  endpoint_identity_group.py  external_radius_server.py  filter_policy.py  guest_location.py  guest_smtp_notification_configuration.py  (+94 more)
ciscoisesdk/api/v3_1_0/: aci_bindings.py  aci_settings.py  active_directory.py  admin_user.py  allowed_protocols.py  anc_endpoint.py  anc_policy.py  authorization_profile.py  backup_and_restore.py  byod_portal.py  certificate_profile.py  certificate_template.py  certificates.py  clear_threats_and_vulnerabilities.py  consumer.py  device_administration_authentication_rules.py  device_administration_authorization_exception_rules.py  (+102 more)
ciscoisesdk/models/: mydict.py  schema_validator.py
docs/: CHANGELOG.rst  Makefile  conf.py  contributing.rst  index.rst  installation.rst  make.bat
docs/api/: api.rst  api_structure_table_v3_0_0.rst  api_structure_table_v3_1_0.rst  api_structure_table_v3_1_1.rst  api_structure_table_v3_1_patch_1.rst  api_structure_table_v3_2_beta.rst  api_structure_table_v3_3_patch_1.rst  intro.rst  quickstart.rst
script/: build  ci  clean  console  installdeps  ipython_console.py  setup  test  update
tests/: config.py  conftest.py  environment.py  restsession.py  test_ciscoisesdk.py  test_importsdk.py  test_restsession.py
tests/api/: __init__.py  test_custom_caller.py
tests/mock/: mock.py
tests/models/: schema_validator.py
(+5036 files in other folders)
