[tool.poetry]
name = "ciscoisesdk"
version = "2.0.5"
description = "Cisco Identity Services Engine Platform SDK"
authors = ["Jose Bogarin Solano <jbogarin@altus.cr>", "William Astorga <wastorga@altus.cr>"]
license = "MIT"
homepage = "https://ciscoisesdk.readthedocs.io/en/latest/"
repository = "https://github.com/CiscoISE/ciscoisesdk"
keywords = ["Cisco", "Identity Services Engine", "SDK"]
classifiers = [
]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
fastjsonschema = "^2.14.5"
future = "^0.18.2"
requests-toolbelt = "^0.9.1"
xmltodict = "0.12.0"

[tool.poetry.dev-dependencies]
sphinx = "^2.1.0"
sphinx-rtd-theme = "*"
pytest = "^5.4.3"
pytest-rerunfailures = "^9.0"
flake8 = "*"
ipython = "*"
readthedocs-sphinx-search = "^0.1.0"
setuptools_scm = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"