[tool.poetry]
name = "ciscoisesdk"
version = "2.1.1"
description = "Cisco Identity Services Engine Platform SDK"
authors = ["Jose Bogarin Solano <jbogarin@cloverhound.com>", "William Astorga <wastorga@cloverhound.com>", "Bryan Vargas <bvargas@cloverhound.com>", "Francisco Muñoz <fmunoz@cloverhound.com>"]
license = "MIT"
homepage = "https://ciscoisesdk.readthedocs.io/en/latest/"
repository = "https://github.com/CiscoISE/ciscoisesdk"
keywords = ["Cisco", "Identity Services Engine", "SDK"]
classifiers = [
]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"
requests = ">=2.27.1, <=2.28"
fastjsonschema = "^2.16.2"
future = "^0.18.3"
requests-toolbelt = "^1.0.0"
xmltodict = "0.12.0"

[tool.poetry.dev-dependencies]
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.3.0"
pytest = "*"
pytest-rerunfailures = "^10.3"
flake8 = "*"
ipython = "*"
readthedocs-sphinx-search = "^0.1.0"
setuptools_scm = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
